--- a/tlp/tlp.conf
+++ b/tlp/tlp.conf
@@ -204,7 +204,7 @@ CPU_SCALING_GOVERNOR_ON_BAT=powersave
 # Devices can be specified by disk ID also (lookup with: tlp diskid).
 # Default: "nvme0n1 sda"
 
-DISK_DEVICES="nvme0n1"
+# DISK_DEVICES="nvme0n1"
 
 # Disk advanced power management level: 1..254, 255 (max saving, min, off).
 # Levels 1..127 may spin down the disk; 255 allowable on most drives.
@@ -212,7 +212,7 @@ DISK_DEVICES="nvme0n1"
 # to keep the hardware default for the particular disk.
 # Default: 254 (AC), 128 (BAT)
 
-DISK_APM_LEVEL_ON_AC="254 254"
+DISK_APM_LEVEL_ON_AC="255 255"
 DISK_APM_LEVEL_ON_BAT="128 128"
 
 # Exclude disk classes from advanced power management (APM):
@@ -234,7 +234,7 @@ DISK_APM_LEVEL_ON_BAT="128 128"
 # to keep the hardware default for the particular disk.
 # Default: <none>
 
-DISK_SPINDOWN_TIMEOUT_ON_AC="0 0"
+DISK_SPINDOWN_TIMEOUT_ON_AC="0"
 DISK_SPINDOWN_TIMEOUT_ON_BAT="60 60"
 
 # Select I/O scheduler for the disk devices.
@@ -260,7 +260,7 @@ DISK_SPINDOWN_TIMEOUT_ON_BAT="60 60"
 # Multiple values separated with spaces are tried sequentially until success.
 # Default: med_power_with_dipm (AC & BAT)
 
-SATA_LINKPWR_ON_AC=max_performance
+SATA_LINKPWR_ON_AC=min_power
 SATA_LINKPWR_ON_BAT=min_power
 
 # Exclude SATA links from AHCI link power management (ALPM).
@@ -334,7 +334,7 @@ SATA_LINKPWR_ON_BAT=min_power
 # Note: radeon driver on legacy ATI hardware only (where DPM is not available).
 # Default: default
 
-RADEON_POWER_PROFILE_ON_AC=high
+RADEON_POWER_PROFILE_ON_AC=auto
 RADEON_POWER_PROFILE_ON_BAT=low
 
 # Wi-Fi power saving mode: on=enable, off=disable.
